--- a/package.json
+++ b/package.json
@@ -25,16 +25,17 @@
   "author": "Allan Bezagrebere(@chemicalGhost)",
   "license": "ISC",
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.0",
-    "chalk": "^5.3.0",
-    "cross-spawn": "^7.0.3",
-    "dotenv": "^17.2.3",
-    "express": "^4.18.2",
-    "inquirer": "^9.2.12",
-    "open": "^10.0.3",
-    "ora": "^7.0.1",
-    "uuid": "^9.0.0",
-    "yargs": "^17.7.2"
+    "@supabase/supabase-js": "2.39.0",
+    "chalk": "5.3.0",
+    "cross-spawn": "7.0.3",
+    "dotenv": "17.2.3",
+    "express": "4.18.2",
+    "inquirer": "9.2.12",
+    "open": "10.0.3",
+    "ora": "7.0.1",
+    "shell-quote": "1.8.3",
+    "uuid": "9.0.0",
+    "yargs": "17.7.2"
   },
   "type": "module"
 }
